# iot-upnp

./: .buildinfo  .coveragerc  .gitignore  .pylintrc  .pypirc  .readthedocs.yml  .travis.yml  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  README.rst  genindex.html  index.html  links.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.cfg  setup.py  sonar-project.properties
_sources/apidoc/: upnp.SSDP.rst.txt  upnp.UPnP.rst.txt
_sources/quickstart/: attribute.rst.txt
apidoc/: modules.html  upnp.HTTP.html  upnp.Objects.html  upnp.SSDP.html  upnp.UPnP.html  upnp.html
docs/: .buildinfo  Makefile  conf.py  genindex.html  index.html  index.rst  links.rst  make.bat  modules.rst  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js  upnp.HTTP.rst  upnp.SSDP.rst  upnp.rst
docs.src/: Makefile  conf.py  make.bat
docs/.doctrees/: environment.pickle  index.doctree
docs/_sources/: index.rst.txt
docs/_static/: documentation_options.js
docs/apidoc/: upnp.HTTP.rst  upnp.Objects.rst  upnp.UPnP.rst  upnp.rst
docs/doctrees/: environment.pickle  index.doctree
docs/quickstart/: asyncio.rst  attribute.rst  dict.rst  index.rst
quickstart/: asyncio.html  attribute.html  dict.html  index.html
upnp/: HTTP.py  Objects.py  SSDP.py  UPnP.py  __init__.py  __main__.py  test_ssdp.py
