[metadata]
name = iot-upnp
description = UPnP device annoncement library
long_description = file: README.rst
author = Remi BONNET
author_email = bonnet@fanaticalhelp.com
url = https://github.com/bontiv/iot-upnp
license = GPLv3
project_urls =
    Documentation = https://iot-upnp.readthedocs.io/
    Tracker = https://github.com/bontiv/iot-upnp/issues
long_description_content_type = text/x-rst
keywords = upnp, ssdp, network, iot
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Programming Language :: Python :: 3
    Topic :: System :: Networking

requires =
  ssdp
  netifaces

provides =
  upnp

[options]
python_requires = >3.0
packages = upnp

setup_requires =
    pytest-runner

install_requires =
    ssdp
    netifaces

tests_require =
    pytest

[aliases]
test=pytest
